@@ -1,3 +1,8 @@
+Sat Sep 15 06:25:02 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>
+
+	* libexslt/date.c: fixed some bugs (reported by Charles Bozeman
+	  and Justin Fletcher)
+
 Fri Sep 14 15:22:30 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/numbers.c: Fixing bug #60415 
